--- a/assets/kycApprovedTemplate.pug
+++ b/assets/kycApprovedTemplate.pug
@@ -6,7 +6,7 @@ html
     br
     hr(style="border-color:#9e9e9e47; width: 50%;")
     br
-    .container(style="color:#716969; font-family: Helvetica, Arial, sans-serif; font-size: 14px;")
+    .container(style="color:#716969; font-family: Helvetica, Arial, sans-serif; font-size: 14px; left: 50%;right:50%;margin: auto !important;width: fit-content;")
       tbody
         tr
           th
