Rejected reason minor fixes

--- a/assets/kycRejectedTemplate.pug
+++ b/assets/kycRejectedTemplate.pug
@@ -20,7 +20,7 @@ html
                 | Your KYC has been rejected.
                 br
               div
-                | Reason :#{kycDetails}
+                | #{kycDetails}
                 br
               div
                 br
